--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,8 @@ body {
   margin: 2rem 0 4rem 0;
   padding: 1rem;
   position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 2.5rem 5rem 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px 0 rgba(242, 239, 239, 0.2), 0 2.5rem 5rem 0 rgba(244, 240, 240, 0.1);
+  border-radius: 10px;
 }
 @media screen and (min-width: 550px) {
   .todoapp {
